--- a/package.json
+++ b/package.json
@@ -1,6 +1,52 @@
 {
-  "name": "typescript",
-  "version": "0.0.0",
+  "name": "typescript-patterns-in-the-real-world",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "rxjs": "6.5.3",
+    "tslib": "1.10.0",
+    "core-js": "2.6.10",
+    "zone.js": "0.9.1",
+    "jasmine-core": "2.99.1",
+    "@angular/core": "8.2.12",
+    "@angular/forms": "8.2.12",
+    "@angular/common": "8.2.12",
+    "@angular/router": "8.2.12",
+    "jasmine-marbles": "0.6.0",
+    "@angular/compiler": "8.2.12",
+    "web-animations-js": "2.3.2",
+    "@angular/animations": "8.2.12",
+    "@angular/platform-browser": "8.2.12",
+    "angular-in-memory-web-api": "0.8.0",
+    "@angular/platform-browser-dynamic": "8.2.12"
+  },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
+  }
 }
